# demAI

./: .gitignore  CLAUDE.md  justfile  package.json  pnpm-lock.yaml
.github/workflows/: demAI-ci.yml  frontend-ci.yml  hardhat-ci.yml
apps/backend/: Cargo.toml
apps/backend/src/: cli.rs  error.rs  main.rs  mono.rs
apps/frontend/: package.json
apps/frontend/app/: layout.tsx
apps/frontend/lib/: utils.ts
